# nepali-address-system

./: README.md  setup.cfg  setup.py
src/nepali_address_system/: __init__.py  addresses.py  data.py  districts.py  municipalities.py  provinces.py
